--- a/Lamborgini.html
+++ b/Lamborgini.html
@@ -35,11 +35,11 @@
             placed under the control of the group's Audi division.
         </i>
         </h3><hr>
-        <img src="la1.jpg" height="200" width="300">
-        <img src="la2.jpg" height="200" width="300"><br>
-        <img src="la3.jpg" height="200" width="300">
-        <img src="la4.jpg" height="200" width="300"><br>
-        <img src="la5.jpg" height="200" width="300">
-        <img src="la6.jpg" height="200" width="300">
+        <img src="Images/la1.jpg" height="200" width="300">
+        <img src="Images/la2.jpg" height="200" width="300"><br>
+        <img src="Images/la3.jpg" height="200" width="300">
+        <img src="Images/la4.jpg" height="200" width="300"><br>
+        <img src="Images/la5.jpg" height="200" width="300">
+        <img src="Images/la6.jpg" height="200" width="300">
     </body>
 </html>
