Images added and relative path updated

--- a/Mc Donalds.html
+++ b/Mc Donalds.html
@@ -30,9 +30,9 @@ I am loving it is our tagline</p>
 
 <h1>Our Food</p>
 
-<img src="mc2.jpg" alt="Mc Donalds" width="260" height="160">
-<img src="mc3.jpg" alt="Mc Donalds" width="260" height="160">
-<img src="mc4.jpg" alt="Mc Donalds" width="260" height="160">
+<img src="Images/mc2.jpg" alt="Mc Donalds" width="260" height="160">
+<img src="Images/mc3.jpg" alt="Mc Donalds" width="260" height="160">
+<img src="Images/mc4.jpg" alt="Mc Donalds" width="260" height="160">
 
 </body>
 </html>
