--- a/Lotus.html
+++ b/Lotus.html
@@ -20,9 +20,9 @@ mytholodgy of ancient India  and has been an auspicious symbol of <br>
 Indian culture since time immemorial.</p><hr>
 
 <h2>Lotus Images</h2>
-<img src="l.jpg" height="200" width="300">
-<img src="l2.jpg" height="200" width="300"><br>
-<img src="l3.jpg" height="200" width="300">
-<img src="l4.jpg" height="200" width="300">
+<img src="Images/l.jpg" height="200" width="300">
+<img src="Images/l2.jpg" height="200" width="300"><br>
+<img src="Images/l3.jpg" height="200" width="300">
+<img src="Images/l4.jpg" height="200" width="300">
 </body>
 </html>
