--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <html>
     <head>
         <title>
-            Lamborghini
+            Sparsh's Html Projects
         </title>
-        <style>
-            body {
-            font-family: 'Raleway', sans-serif;
-            text-align: center;
-            justify-content: space-around;
-            height: 100%;
-            align-items: center;
-            background: linear-gradient(#ff0202, white, #f60303)
-            }
-            </style>
     </head>
-  <a href="Lamborgini.html">Lamborgini</a>
+  <table>
+      <h1><a href="Lamborgini.html">Lamborgini</a></h1>
+    <h1><a href="Lotus.html">Lotus</a></h1>
+    <h1><a href="Mc Donalds.html">Mc Donalds</a></h1>
+    </table>
 </html>
