--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             Sparsh's Html Projects
         </title>
     </head>
-    <h1><a href="Lamborgini.html">Lamborgini</a></h1>
+    <h1><a href="Lamborgini.html">Lamborghini</a></h1>
     <h1><a href="Lotus.html">Lotus</a></h1>
     <h1><a href="Mc Donalds.html">Mc Donalds</a></h1>
 </html>
