--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
             Sparsh's Html Projects
         </title>
     </head>
-    <h1><a href="Lamborgini.html">Lamborghini</a></h1>
-    <h1><a href="Lotus.html">Lotus</a></h1>
-    <h1><a href="Mc Donalds.html">Mc Donalds</a></h1>
+    <body>
+        <h1>
+            <b><i>Sparsh's Html Projects</i></b>
+        </h1>
+    
+    <h2><a href="Lamborgini.html">Lamborghini</a></h2>
+    <h2><a href="Lotus.html">Lotus</a></h2>
+    <h2><a href="Mc Donalds.html">Mc Donalds</a></h2>
+        </body>
+    
 </html>
