--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>
-            <b><i>Sparsh's Html Projects</i></b>
+            <b><u>Sparsh's Html Projects</u></b>
         </h1>
     
     <h2><a href="Lamborgini.html">Lamborghini</a></h2>
