--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <b><u>Sparsh's Html Projects</u></b>
         </h1>
     
-    <h2><a href="Lamborgini.html">Lamborghini</a></h2>
-    <h2><a href="Lotus.html">Lotus</a></h2>
-    <h2><a href="Mc Donalds.html">Mc Donalds</a></h2>
+    <t><h2><a href="Lamborgini.html">Lamborghini</a></h2>
+    <t><h2><a href="Lotus.html">Lotus</a></h2>
+    <t><h2><a href="Mc Donalds.html">Mc Donalds</a></h2>
         </body>
     
 </html>
