--- a/TTMECITW.html
+++ b/TTMECITW.html
@@ -17,7 +17,7 @@ background: linear-gradient(#ff0000, white, #ff0000)
     <body>
         <h1>Top Ten Most Expensive Cars In The World</h1>
         <h2><marquee>Made by Sparsh</marquee></h2>
-        <h1>1. Rolls-Royce Boat Tail</h1><br>
+        <h1>1. Rolls-Royce Boat Tail</h1>
         <h3>Rolls Royce is known for its luxury cars. The new Boat Tail looks exquisite,
              it is a successor to the gorgeous Sweptail that was produced in 2017. 
              The Sweptail cost $12.8 million. The company hasn’t announced the pricing yet,
