--- a/TTMECITW.html
+++ b/TTMECITW.html
@@ -25,6 +25,7 @@ background: linear-gradient(#ff0000, white, #ff0000)
               The exterior of the Boat Tail is two-toned, which is not seen on many cars, 
               the finishing is high-end, and the interior comes with a “hosting suite” with a 
               built-in sun umbrella and champagne fridge. Who doesn’t love champagne, right? 
-              Rolls Royce never disappoints.</h3>
+              Rolls Royce never disappoints.</h3><br>
+              <img src="Images/1. Rolls-Royce Boat Tail.jpg" width="260" height="160">   
     </body>
 </html>
