--- a/TTMECITW.html
+++ b/TTMECITW.html
@@ -10,7 +10,7 @@ text-align: center;
 justify-content: space-around;
 height: 100%;
 align-items: center;
-background: linear-gradient(#ff0000, white, #ff0000)
+background: linear-gradient(#002fff, white, #0037ff)
 }
        </style>          
     </head>
@@ -26,6 +26,21 @@ background: linear-gradient(#ff0000, white, #ff0000)
               the finishing is high-end, and the interior comes with a “hosting suite” with a 
               built-in sun umbrella and champagne fridge. Who doesn’t love champagne, right? 
               Rolls Royce never disappoints.</h3><br>
-              <img src="Images/1. Rolls-Royce Boat Tail.jpg" width="260" height="160">   
+              <img src="Images/1. Rolls-Royce Boat Tail.jpg" width="642" height="361"> <hr>
+        <h1>2. Buggati La Voiture Noire</h1>
+        <h3>Buggati La Voiture Noire comes with the quad-turbo 8 litre W16 engine. 
+            It produces 1479 horsepower and 1600 newton-metres of torque. One can 
+            find it hard to believe, but this car comes with six exhaust tips. 
+            The swanky new Buggati La Voiture Noire comes with radical wheels, the 
+            fascia is bespoke, and the badge at the backlights up to spell the name 
+            of the brand, making it evidently Buggati. La Voiture Noire is a tribute 
+            to the history of the legendary Buggati. It stands for sophistication and elegance. 
+            It brings speed, aesthetics, luxury, and technology and is nothing short of an icon. 
+            This all-black Atlantic is priced at $18.7 million.</h3>
+            <img src="Images/2. Buggati La Voiture Noire.jpg" width="642" height="361"> <hr>
+        <h1>3. Buggati Centodieci</h1>
+        <h3>The Centodieci is a really rare car, it was debuted by Buggati in Pebble Beach car week. The Centodieci builds on Bugatti’s 110-year tradition of excellent design and performance while also honouring the brand’s recent heritage. Bugatti designed a recreation of the epochal EB110 with the Centodieci – Italian for 110. With its astounding performance and pioneering design, the Centodieci, inspired by the historical model, challenges all bounds of creativity. The Centodieci, with its modern version of the classic wedge shape and the renowned W16 engine, tastefully ushers the EB110 into the new millennium. There are only 10 units produced and the 10 limited-edition cars are distinguished by their flawless elegance and sculptural beauty, transforming the Centodieci into a true work of art. The car is one of the most exclusive cars ever made and it is priced at $9 million.</h3>
+        <img src="Images/Buggati-Centodieci.jpg" width="642" height="361"> <hr>
+        <h1></h1>
     </body>
 </html>
