--- a/TTMECITW.html
+++ b/TTMECITW.html
@@ -24,7 +24,7 @@ background: linear-gradient(#002fff, white, #0037ff)
               but the rumours say that the Boat Tail is supposed to be a whopping $28 million. 
               The exterior of the Boat Tail is two-toned, which is not seen on many cars, 
               the finishing is high-end, and the interior comes with a “hosting suite” with a 
-              built-in sun umbrella and champagne fridge. Who doesn’t love champagne, right? 
+              built-in sun umbrella and champagne fridge. 
               Rolls Royce never disappoints.</h3><br>
               <img src="Images/1. Rolls-Royce Boat Tail.jpg" width="642" height="361"> <hr>
         <h1>2. Buggati La Voiture Noire</h1>
