--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <b><u>Sparsh's Html Projects</u></b>
         </h1>
     
-    <t><h2><a href="Lamborgini.html">Lamborghini</a></h2>
-    <t><h2><a href="Lotus.html">Lotus</a></h2>
-    <t><h2><a href="Mc Donalds.html">Mc Donalds</a></h2>
-    <t><h2><a href="TTMECITW.html">Top Ten Most Expensive Cars In The World</a></h2>
+    <t><h2><a href="Lamborgini.html">Click Here For a Detailed Explanation on Lamborghini</a></h2>
+    <t><h2><a href="Lotus.html">Click Here For a Detailed Explanation on Lotus</a></h2>
+    <t><h2><a href="Mc Donalds.html">Click Here to Check Out the Latest Advertistment on Mc Donalds</a></h2>
+    <t><h2><a href="TTMECITW.html">Click Here To Know More About Top Ten Most Expensive Cars In The World</a></h2>
         </body>
     
 </html>
