--- a/Lamborgini.html
+++ b/Lamborgini.html
@@ -19,7 +19,7 @@
             <b><i>Lamborghini</i></b>
         <h2>
             <marquee>
-                Made by Sparsh
+                Made by Clever Hackers
             </marquee>
         </h2>
         </h1>
