--- a/Lotus.html
+++ b/Lotus.html
@@ -14,7 +14,7 @@ background: linear-gradient(#ff00d9, white, #ff00d4)
 </head>
 <body>
 <h1>Lotus-National Flower of India</h1>
-<h2><marquee>Made by Sparsh</marquee></h2>
+<h2><marquee>Made by Clever Hackers</marquee></h2>
 <p><b>Lotus <i>(Nelumbo Nucifera Gaertn)</b></i> is the National Flower of India.<br>
 It is a sacred flower and occupies a unique position in the art and <br>
 mytholodgy of ancient India  and has been an auspicious symbol of <br>
