--- a/Mc Donalds.html
+++ b/Mc Donalds.html
@@ -15,7 +15,7 @@ background: linear-gradient(#ffff00, white, #ffff00)
 
 <body align="center">
 <h1 style="text-align:center;"><u>Mc Donalds</u></h1>
-<h2><marquee>Made by Sparsh</marquee></h2>
+<h2><marquee>Made by Clever Hackers</marquee></h2>
 <img src="Images/mc1.jpg" alt="Mc Donalds" width="260" height="160">
 
 <h2>Mc Donalds Invites You Here</h2>
