--- a/Registration.html
+++ b/Registration.html
@@ -5,10 +5,12 @@
         </title>
     </head>
     <body>
+        <h1>Registration Yourself</h1>
+        <h2><marquee>Made by Clever Hackers</marquee></h2>
         <form>
             <label>First Name:</label>
             <input type="text">
-            
+
         </form>
     </body>
 </html>
