--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>
             <b><u>Clever Hacker's Html Projects</u></b>
         </h1>
-    
+    <t><h2><a href="Registration.html">Click Here To Register Yourself</a></h2></t>
     <t><h2><a href="Lamborgini.html">Click Here For a Detailed Explained on Lamborghini</a></h2></t>
     <t><h2><a href="Lotus.html">Click Here For a Detailed Explanation on Lotus</a></h2>
     <t><h2><a href="Mc Donalds.html">Click Here to Check Out the Latest Advertistment on Mc Donalds</a></h2>
