--- a/Registration.html
+++ b/Registration.html
@@ -3,6 +3,16 @@
         <title>
             Registration
         </title>
+        <style>
+            body {
+            font-family: 'Raleway', sans-serif;
+            text-align: center;
+            justify-content: space-around;
+            height: 100%;
+            align-items: center;
+            background: linear-gradient(#c0ff02, white, #e6f603)
+            }
+            </style>
     </head>
     <body>
         <h1>Registration Yourself</h1>
