--- a/Registration.html
+++ b/Registration.html
@@ -20,7 +20,12 @@
         <form>
             <label>First Name:</label>
             <input type="text">
-
+            <label>Last Name:</label>
+            <input type="text">
+            <label>Password:</label>
+            <input type="password">
+            <label>Confirm Password:</label>
+            <input type="password">
         </form>
     </body>
 </html>
