--- a/Registration.html
+++ b/Registration.html
@@ -18,13 +18,13 @@
         <h1>Registration Yourself</h1>
         <h2><marquee>Made by Clever Hackers</marquee></h2>
         <form>
-            <label>First Name:</label>
+            <h2><label>First Name:</label></h2>
             <input type="text">
-            <label>Last Name:</label>
+            <h2><label>Last Name:</label></h2>
             <input type="text">
-            <label>Password:</label>
+            <h2><label>Password:</label></h2>
             <input type="password">
-            <label>Confirm Password:</label>
+            <h2><label>Confirm Password:</label></h2>
             <input type="password">
         </form>
     </body>
