--- a/Registration.html
+++ b/Registration.html
@@ -19,13 +19,13 @@
         <h2><marquee>Made by Clever Hackers</marquee></h2>
         <form>
             <h2><label>First Name:</label></h2>
-            <input type="text">
+            <input type="text"><br>
             <h2><label>Last Name:</label></h2>
-            <input type="text">
+            <input type="text"><br>
             <h2><label>Password:</label></h2>
-            <input type="password">
+            <input type="password"><br>
             <h2><label>Confirm Password:</label></h2>
-            <input type="password">
+            <input type="password"><br>
         </form>
     </body>
 </html>
