--- a/Registration.html
+++ b/Registration.html
@@ -19,13 +19,13 @@
         <h2><marquee>Made by Clever Hackers</marquee></h2>
         <form>
             <h3><label>First Name:</label></h3>
-            <input type="text"><br>
+            <input type="text"><br><br>
             <h3><label>Last Name:</label></h3>
-            <input type="text"><br>
+            <input type="text"><br><br>
             <h3><label>Password:</label></h3>
-            <input type="password"><br>
+            <input type="password"><br><br>
             <h3><label>Confirm Password:</label></h3>
-            <input type="password"><br>
+            <input type="password"><br><br>
 
         </form>
     </body>
