--- a/Registration.html
+++ b/Registration.html
@@ -4,16 +4,13 @@
             Registration
         </title>
         <style>
-            h1,h2,marquee {
+            body {
             font-family: 'Raleway', sans-serif;
             text-align: center;
             justify-content: space-around;
             height: 100%;
-            align-items: center;
+            align-items: left;
             background: linear-gradient(#c0ff02, white, #e6f603)
-            }
-            h3 {
-                background: linear-gradient(#c0ff02, white, #e6f603)
             }
             </style>
     </head>
