--- a/Registration.html
+++ b/Registration.html
@@ -14,7 +14,7 @@
             </style>
     </head>
     <body>
-        <h1>Registration Yourself</h1>
+        <h1>Register Yourself</h1>
         <h2><marquee>Made by Clever Hackers</marquee></h2>
         <form>
             <h3><label>First Name:</label></h3>
